# stripes

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  deploy.sh  sqlx-data.json
assets/: package.json
assets/src/: Api.elm  Shared.elm  Ui.elm
assets/src/Juniper/: InputObject.elm  Mutation.elm  Object.elm  Query.elm
assets/src/Juniper/Object/: Item.elm
assets/src/Pages/: Home_.elm
migrations/: 20220212011959_create_items.sql
src/: main.rs
